k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config
  namespace: springcloud
  labels:
    app: springcloud-config
spec:
  replicas: 1
  selector:
    matchLabels:
      springcloud: config
  template:
    metadata:
      labels:
        springcloud: config
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port:   '8888'
        prometheus.io/path: '/actuator/prometheus'
    spec:
      containers:
        - name: app
          image: dockercamp/springcloud-config:1.3.0
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: application-config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: application-config
          configMap:
            name: springcloud-config
            items:
              - key: application.yaml
                path: application.yaml
