k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config
  namespace: springcloud
spec:
  selector:
    springcloud: config
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
