k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: config
  namespace: springcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
    external-dns.alpha.kubernetes.io/target: home.cluster.camp
spec:
  rules:
    - host: config.cluster.camp
      http:
        paths:
          - path: /
            backend:
              serviceName: config
              servicePort: 8888
